# echo

./: .gitignore  README.md  echo.py  pyproject.toml  setup.cfg
script/: build  deploy
src/echo/: __init__.py
