[metadata]
name = echo
version = 1.0.0
author = Gabor Ratky
author_email = gabor.ratky@databricks.com
description = Echo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gaborratky-db/echo
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    echo = echo:main
    echo_with_args = echo:main_with_args

[options.packages.find]
where = src